--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
     <link rel="preconnect" href="https://api1.ldpform.com/" crossorigin>
     <link rel="preconnect" href="https://a.ladipage.com/" crossorigin>
     <link rel="preconnect" href="https://api.sales.ldpform.net/" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
+
     <link rel="preload"
         href="https://fonts.googleapis.com/css2?family=Jura:wght@400;700&family=Philosopher:wght@400;700&display=swap"
         as="style" onload="this.onload = null; this.rel = 'stylesheet';">
@@ -2164,6 +2166,11 @@
             src: url("https://w.ladicdn.com/6446a909ce8883001284c7a2/mau17_dfvn-indulge-script-20250328143031-tpgin.otf")
         }
 
+        @font-face {
+            font-family: "RJlYXRWaWJlcySZWdbGFyLnRZg";
+            src: url("https://w.ladicdn.com/644bd195fdccd700206206ea/greatvibes-regular-20250222162357-99yv3.ttf") format("truetype");
+        }
+
         body {
             font-family: Jura, sans-serif
         }
@@ -2921,7 +2928,7 @@
         #HEADLINE30>.ladi-headline,
         #HEADLINE21>.ladi-headline,
         #HEADLINE22>.ladi-headline {
-            font-family: TWFMTdfREZWTiBJbmRbGdlIFNjcmlwdCvdGY;
+            font-family: RJlYXRWaWJlcySZWdbGFyLnRZg;
             font-weight: bold;
             line-height: 1.6;
             color: rgb(115, 115, 115);
@@ -4353,14 +4360,14 @@
         }
 
         #IMAGE157>.ladi-image>.ladi-image-background {
-            background-image: url("./image/qr1.jpeg");
-            background-position: -13px -128px;
-            background-size: 109%;
+            background-image: url("./image/qr2.jpeg");
+            background-position: -5px -14px;
+            background-size: 100%;
         }
 
         #IMAGE163>.ladi-image>.ladi-image-background {
-            background-position: -13px -128px;
-            background-size: 109%;
+            background-position: -5px -14px;
+            background-size: 100%;
             background-image: url("./image/qr2.jpeg");
         }
 
@@ -4930,7 +4937,7 @@
                 height: 490.947px;
                 top: -56px;
                 left: -23px;
-                background-image: url("./image/1.jpeg");
+                background-image: url("./image/6.jpeg");
             }
 
             #SECTION19 {
@@ -5102,7 +5109,7 @@
             }
 
             #IMAGE52>.ladi-image>.ladi-image-background {
-                background-image: url("./image/7.jpeg");
+                background-image: url("./image/1.jpeg");
             }
 
             #GROUP24,
@@ -5127,7 +5134,7 @@
             #HEADLINE30>.ladi-headline,
             #HEADLINE21>.ladi-headline,
             #HEADLINE22>.ladi-headline {
-                font-size: 50px;
+                font-size: 38px;
             }
 
             #IMAGE49,
@@ -5586,15 +5593,15 @@
             #IMAGE66>.ladi-image>.ladi-image-background {
                 width: 369.667px;
                 height: 554.5px;
-                top: -97px;
-                left: -12px;
+                top: -34px;
+                left: 2px;
             }
 
             #IMAGE661>.ladi-image>.ladi-image-background {
                 width: 380.667px;
                 height: 563.5px;
-                top: -67px;
-                left: -32px;
+                top: -57px;
+                left: 3px;
             }
 
             #HEADLINE36 {
@@ -5688,8 +5695,8 @@
             #IMAGE70>.ladi-image>.ladi-image-background {
                 width: 366.727px;
                 height: 550.09px;
-                top: -82.2666px;
-                left: -26.99559px;
+                top: -12.2666px;
+                left: 29.00441px;
                 background-image: url("./image/13.jpeg");
             }
 
@@ -5967,6 +5974,7 @@
             }
 
             #IMAGE100>.ladi-image>.ladi-image-background {
+                background-position: 0px -88px;
                 background-image: url("./image/9.jpeg");
             }
 
@@ -6048,6 +6056,7 @@
                 height: 352.179px;
                 top: -9px;
                 background-image: url("./image/21.jpeg");
+                background-position: 0px -64px;
             }
 
             #IMAGE87 {
@@ -6075,6 +6084,7 @@
 
             #IMAGE92>.ladi-image>.ladi-image-background {
                 background-image: url("./image/4.jpeg");
+                background-position: -142px;
             }
 
             #IMAGE93 {
@@ -6092,7 +6102,7 @@
             }
 
             #IMAGE106>.ladi-image>.ladi-image-background {
-                background-image: url("./image/1.jpeg");
+                background-image: url("./image/6.jpeg");
             }
 
             #IMAGE107 {
@@ -6226,7 +6236,7 @@
             #IMAGE67>.ladi-image>.ladi-image-background {
                 width: 522.116px;
                 height: 783.174px;
-                top: -170px;
+                top: -67px;
                 left: 1px;
                 background-image: url("./image/11.jpeg");
             }
@@ -6904,9 +6914,9 @@
             #IMAGE162>.ladi-image>.ladi-image-background {
                 width: 344.618px;
                 height: 516.927px;
-                top: -112px;
-                left: -5px;
-                background-image: url("./image/26.jpeg");
+                top: -82px;
+                left: 13px;
+                background-image: url("./image/9.jpeg");
             }
 
             #GROUP81,
@@ -7334,7 +7344,7 @@
                 height: 448.221px;
                 top: -34px;
                 left: -24.6667px;
-                background-image: url("./image/1.jpeg");
+                background-image: url("./image/6.jpeg");
             }
 
             #SECTION19 {
@@ -7503,7 +7513,7 @@
             }
 
             #IMAGE52>.ladi-image>.ladi-image-background {
-                background-image: url("./image/7.jpeg");
+                background-image: url("./image/1.jpeg");
             }
 
             #GROUP24,
@@ -7526,7 +7536,7 @@
             #HEADLINE30>.ladi-headline,
             #HEADLINE21>.ladi-headline,
             #HEADLINE22>.ladi-headline {
-                font-size: 39px;
+                font-size: 25px;
             }
 
             #IMAGE49,
@@ -7962,8 +7972,8 @@
             #IMAGE66>.ladi-image>.ladi-image-background {
                 width: 369.667px;
                 height: 554.5px;
-                top: -127px;
-                left: -15px;
+                top: -46px;
+                left: 3px;
             }
 
             #IMAGE661>.ladi-image>.ladi-image-background {
@@ -8068,8 +8078,8 @@
             #IMAGE70>.ladi-image>.ladi-image-background {
                 width: 302.463px;
                 height: 453.695px;
-                top: -81.386px;
-                left: -28.37199px;
+                top: -13.386px;
+                left: 14.62801px;
                 background-image: url("./image/13.jpeg");
             }
 
@@ -8356,6 +8366,7 @@
                 top: -4px;
                 left: -9px;
                 background-image: url("./image/9.jpeg");
+                background-position: 9px -88px;
             }
 
             #IMAGE101,
@@ -8431,6 +8442,7 @@
                 width: 403.269px;
                 height: 302.755px;
                 background-image: url("./image/21.jpeg");
+                background-position: 0px -64px;
             }
 
             #IMAGE87 {
@@ -8458,6 +8470,7 @@
 
             #IMAGE92>.ladi-image>.ladi-image-background {
                 background-image: url("./image/4.jpeg");
+                background-position: -119px;
             }
 
             #IMAGE93 {
@@ -8475,7 +8488,7 @@
             }
 
             #IMAGE106>.ladi-image>.ladi-image-background {
-                background-image: url("./image/1.jpeg");
+                background-image: url("./image/6.jpeg");
             }
 
             #IMAGE107 {
@@ -8601,7 +8614,7 @@
             #IMAGE67>.ladi-image>.ladi-image-background {
                 width: 449.785px;
                 height: 674.678px;
-                top: -153px;
+                top: -63px;
                 left: -30px;
                 background-image: url("./image/11.jpeg");
             }
@@ -9294,9 +9307,9 @@
             #IMAGE162>.ladi-image>.ladi-image-background {
                 width: 290.411px;
                 height: 435.616px;
-                top: -100px;
-                left: -18.3333px;
-                background-image: url('./image/26.jpeg');
+                top: -68px;
+                left: 6.6667px;
+                background-image: url('./image/9.jpeg');
             }
 
             #GROUP81,
@@ -9753,7 +9766,7 @@ var message="NoRightClicking"; function defeatIE() {if (document.all) {(message)
                 <div id="GROUP24" class='ladi-element'>
                     <div class='ladi-group'>
                         <div id="HEADLINE26" class='ladi-element'>
-                            <h3 class='ladi-headline ladi-transition'>Thúy Thơm</h3>
+                            <h3 class='ladi-headline ladi-transition'>Nguyễn Thị Thúy Thơm</h3>
                         </div>
                         <div id="IMAGE49" class='ladi-element'>
                             <div class='ladi-image ladi-transition'>
@@ -9777,7 +9790,7 @@ var message="NoRightClicking"; function defeatIE() {if (document.all) {(message)
                 <div id="GROUP25" class='ladi-element'>
                     <div class='ladi-group'>
                         <div id="HEADLINE30" class='ladi-element'>
-                            <h3 class='ladi-headline ladi-transition'>Trung Kiên</h3>
+                            <h3 class='ladi-headline ladi-transition'>Nguyễn Trung Kiên</h3>
                         </div>
                         <div id="IMAGE53" class='ladi-element'>
                             <div class='ladi-image ladi-transition'>
@@ -9856,10 +9869,10 @@ var message="NoRightClicking"; function defeatIE() {if (document.all) {(message)
                 <div id="GROUP13" class='ladi-element'>
                     <div class='ladi-group'>
                         <div id="HEADLINE21" class='ladi-element'>
-                            <h3 class='ladi-headline ladi-transition'>Trung Kiên</h3>
+                            <h3 class='ladi-headline ladi-transition'>Nguyễn Trung Kiên</h3>
                         </div>
                         <div id="HEADLINE22" class='ladi-element'>
-                            <h3 class='ladi-headline ladi-transition'>Thúy Thơm</h3>
+                            <h3 class='ladi-headline ladi-transition'>Nguyễn Thị Thúy Thơm</h3>
                         </div>
                         <div id="IMAGE47" class='ladi-element'>
                             <div class='ladi-image'>
@@ -10972,15 +10985,15 @@ var message="NoRightClicking"; function defeatIE() {if (document.all) {(message)
                             </div>
                         </div>
                         <div id="HEADLINE72" class='ladi-element'>
-                            <h3 class='ladi-headline'>CTK: NGUYEN TIEN HUNG THINH<span
+                            <h3 class='ladi-headline'>CTK: NGUYEN TRUNG KIEN<span
                                     style="font-weight: normal;"><br></span>STK: <span
-                                    style="font-weight: 400;">0711000289835</span><br></h3>
+                                    style="font-weight: 400;"></span><br></h3>
                         </div>
                         <div id="HEADLINE71" class='ladi-element'>
                             <h3 class='ladi-headline'>Mừng cưới</h3>
                         </div>
                         <div id="HEADLINE73" class='ladi-element'>
-                            <h3 class='ladi-headline'>Ngân hàng VietcomBank</h3>
+                            <h3 class='ladi-headline'>Ngân hàng MBBank</h3>
                         </div>
                     </div>
                 </div>
@@ -11018,7 +11031,7 @@ var message="NoRightClicking"; function defeatIE() {if (document.all) {(message)
                                     </div>
                                 </div>
                                 <div id="HEADLINE82" class='ladi-element'>
-                                    <h3 class='ladi-headline'>From: Trung Kiên - Thúy Thơm<br></h3>
+                                    <h3 class='ladi-headline'>From: Kiên - Thơm<br></h3>
                                 </div>
                                 <div data-action="true" id="BUTTON14" class='ladi-element off_speaker'>
                                     <div class='ladi-button'>
