--- a/index.html
+++ b/index.html
@@ -10124,7 +10124,7 @@ var message="NoRightClicking"; function defeatIE() {if (document.all) {(message)
                         <div id="HEADLINE37" class='ladi-element'>
                             <h3 class='ladi-headline ladi-transition'>LỄ THÀNH HÔN<br></h3>
                         </div>
-                        <div data-action="true" id="BUTTON31" class='ladi-element ladi-animation' onClick="window.open('https://www.google.com/maps/search/Trung+t%C3%A2m+h%E1%BB%99i+ngh%E1%BB%8B+H%C3%B2a+B%C3%ACnh+ph%C3%BA+th%E1%BB%8D/@19.7579382,104.6328576,8z/data=!3m1!4b1?entry=ttu&g_ep=EgoyMDI1MDkzMC4wIKXMDSoASAFQAw%3D%3D')">
+                        <div data-action="true" id="BUTTON31" class='ladi-element ladi-animation' onClick="window.open('https://www.google.com/maps/place/Trung+t%C3%A2m+h%E1%BB%99i+ngh%E1%BB%8B+Ho%C3%A0+B%C3%ACnh/@20.8283097,105.3365306,16.99z/data=!4m15!1m8!3m7!1s0x31346ba1edfb76c3:0xff0976d73b6dabad!2zMTMzIEzDqiBUaMOhbmggVMO0bmcsIFTDom4gVGjhu4tuaCwgSMOyYSBCw6xuaCwgMzYwMDAsIFZp4buHdCBOYW0!3b1!8m2!3d20.8282437!4d105.3376604!16s%2Fg%2F11s9lpcdxn!3m5!1s0x31346b006f69f97f:0x32ebad22b9ff5e0a!8m2!3d20.8277939!4d105.3377398!16s%2Fg%2F11y8f115vg?hl=vi&entry=ttu&g_ep=EgoyMDI1MDkzMC4wIKXMDSoASAFQAw%3D%3D')">
                             <div class='ladi-button'>
                                 <div class="ladi-button-background"></div>
                                 <div id="BUTTON_TEXT3" class='ladi-element ladi-button-headline'>
