--- a/index.html
+++ b/index.html
@@ -2175,7 +2175,20 @@
             src: url("https://w.ladicdn.com/644bd195fdccd700206206ea/greatvibes-regular-20250222162357-99yv3.ttf") format("truetype");
         }
 
-        @font-face {font-family: "TlROIFYyLnRZg";src: url("https://w.ladicdn.com/649340684a3700001217851c/ntn-v2-20250514141132-ljxdl.ttf")}
+        @font-face {
+            font-family: "TWudGVDYXJsbySZWdbGFyLnRZg";
+            src: url("https://w.ladicdn.com/644bd195fdccd700206206ea/montecarlo-regular-20250126145636-tlbjs.ttf") format("truetype");
+        }
+
+        @font-face {
+            font-family: "TlROIFYyLnRZg";
+            src: url("https://w.ladicdn.com/649340684a3700001217851c/ntn-v2-20250514141132-ljxdl.ttf")
+        }
+
+        @font-face {
+            font-family: "VVRNIEFWTyUVEY";
+            src: url("https://w.ladicdn.com/649340684a3700001217851c/utm-avo-20250418075341-itwii.ttf") format("truetype");
+        }
 
         body {
             font-family: Jura, sans-serif
@@ -3306,6 +3319,7 @@
             color: rgb(255, 255, 255);
             text-transform: uppercase;
             text-align: center;
+            font-family: Tinos, serif;
         }
 
         #IMAGE61>.ladi-image {
@@ -3496,14 +3510,18 @@
             height: 40px;
         }
 
-        #BUTTON3>.ladi-button, #BUTTON31>.ladi-button, #BUTTON32>.ladi-button {
+        #BUTTON3>.ladi-button,
+        #BUTTON31>.ladi-button,
+        #BUTTON32>.ladi-button {
             border-width: 1px;
             border-radius: 21px;
             border-style: solid;
             border-color: rgb(97, 135, 104);
         }
 
-        #BUTTON3.ladi-animation>.ladi-button, #BUTTON31.ladi-animation>.ladi-button, #BUTTON32.ladi-animation>.ladi-button {
+        #BUTTON3.ladi-animation>.ladi-button,
+        #BUTTON31.ladi-animation>.ladi-button,
+        #BUTTON32.ladi-animation>.ladi-button {
             animation-name: pulse;
             animation-delay: 0s;
             animation-duration: 1s;
@@ -5590,7 +5608,8 @@
                 height: 485px;
             }
 
-            #GROUP31 #BOX21, #IMAGE66 {
+            #GROUP31 #BOX21,
+            #IMAGE66 {
                 height: 510px;
             }
 
@@ -5733,7 +5752,7 @@
             #HEADLINE46 {
                 width: 155px;
                 top: 50.87px;
-                left: 77.6001px;
+                left: 64.6001px;
             }
 
             #HEADLINE46>.ladi-headline,
@@ -8143,7 +8162,7 @@
             #HEADLINE46 {
                 width: 54px;
                 top: 41.683px;
-                left: 86px;
+                left: 76px;
             }
 
             #HEADLINE46>.ladi-headline,
@@ -8167,7 +8186,7 @@
                 left: 101.499px;
             }
 
-            #BUTTON31{
+            #BUTTON31 {
                 width: 217px;
                 top: 450px;
                 height: 40px;
@@ -10124,7 +10143,8 @@ var message="NoRightClicking"; function defeatIE() {if (document.all) {(message)
                         <div id="HEADLINE37" class='ladi-element'>
                             <h3 class='ladi-headline ladi-transition'>LỄ THÀNH HÔN<br></h3>
                         </div>
-                        <div data-action="true" id="BUTTON31" class='ladi-element ladi-animation' onClick="window.open('https://www.google.com/maps/place/Trung+t%C3%A2m+h%E1%BB%99i+ngh%E1%BB%8B+Ho%C3%A0+B%C3%ACnh/@20.8283097,105.3365306,16.99z/data=!4m15!1m8!3m7!1s0x31346ba1edfb76c3:0xff0976d73b6dabad!2zMTMzIEzDqiBUaMOhbmggVMO0bmcsIFTDom4gVGjhu4tuaCwgSMOyYSBCw6xuaCwgMzYwMDAsIFZp4buHdCBOYW0!3b1!8m2!3d20.8282437!4d105.3376604!16s%2Fg%2F11s9lpcdxn!3m5!1s0x31346b006f69f97f:0x32ebad22b9ff5e0a!8m2!3d20.8277939!4d105.3377398!16s%2Fg%2F11y8f115vg?hl=vi&entry=ttu&g_ep=EgoyMDI1MDkzMC4wIKXMDSoASAFQAw%3D%3D')">
+                        <div data-action="true" id="BUTTON31" class='ladi-element ladi-animation'
+                            onClick="window.open('https://www.google.com/maps/place/Trung+t%C3%A2m+h%E1%BB%99i+ngh%E1%BB%8B+Ho%C3%A0+B%C3%ACnh/@20.8283097,105.3365306,16.99z/data=!4m15!1m8!3m7!1s0x31346ba1edfb76c3:0xff0976d73b6dabad!2zMTMzIEzDqiBUaMOhbmggVMO0bmcsIFTDom4gVGjhu4tuaCwgSMOyYSBCw6xuaCwgMzYwMDAsIFZp4buHdCBOYW0!3b1!8m2!3d20.8282437!4d105.3376604!16s%2Fg%2F11s9lpcdxn!3m5!1s0x31346b006f69f97f:0x32ebad22b9ff5e0a!8m2!3d20.8277939!4d105.3377398!16s%2Fg%2F11y8f115vg?hl=vi&entry=ttu&g_ep=EgoyMDI1MDkzMC4wIKXMDSoASAFQAw%3D%3D')">
                             <div class='ladi-button'>
                                 <div class="ladi-button-background"></div>
                                 <div id="BUTTON_TEXT3" class='ladi-element ladi-button-headline'>
@@ -10170,7 +10190,8 @@ var message="NoRightClicking"; function defeatIE() {if (document.all) {(message)
                         <div id="HEADLINE37" class='ladi-element'>
                             <h3 class='ladi-headline ladi-transition'>LỄ VU QUY<br></h3>
                         </div>
-                        <div data-action="true" id="BUTTON32" class='ladi-element ladi-animation' onClick="window.open('https://www.google.com/maps/place/Nh%C3%A0+v%C4%83n+ho%C3%A1+th%C3%B4n+v%C3%A2n+l%C5%A9ng/@21.0039207,105.7176566,16.05z/data=!4m6!3m5!1s0x31345300066c7643:0xef2600d44b5922a4!8m2!3d21.0038295!4d105.7176469!16s%2Fg%2F11m61mjq7l?hl=vi&entry=ttu&g_ep=EgoyMDI1MDkzMC4wIKXMDSoASAFQAw%3D%3D')">
+                        <div data-action="true" id="BUTTON32" class='ladi-element ladi-animation'
+                            onClick="window.open('https://www.google.com/maps/place/Nh%C3%A0+v%C4%83n+ho%C3%A1+th%C3%B4n+v%C3%A2n+l%C5%A9ng/@21.0039207,105.7176566,16.05z/data=!4m6!3m5!1s0x31345300066c7643:0xef2600d44b5922a4!8m2!3d21.0038295!4d105.7176469!16s%2Fg%2F11m61mjq7l?hl=vi&entry=ttu&g_ep=EgoyMDI1MDkzMC4wIKXMDSoASAFQAw%3D%3D')">
                             <div class='ladi-button'>
                                 <div class="ladi-button-background"></div>
                                 <div id="BUTTON_TEXT3" class='ladi-element ladi-button-headline'>
@@ -10203,10 +10224,10 @@ var message="NoRightClicking"; function defeatIE() {if (document.all) {(message)
                         <div id="GROUP34" class='ladi-element'>
                             <div class='ladi-group'>
                                 <div id="HEADLINE44" class='ladi-element'>
-                                    <h3 class='ladi-headline'>Trung Kiên<br></h3>
+                                    <h3 class='ladi-headline'>Kiên<br></h3>
                                 </div>
                                 <div id="HEADLINE45" class='ladi-element'>
-                                    <h3 class='ladi-headline'>Thuý Thơm<br></h3>
+                                    <h3 class='ladi-headline'>Thơm<br></h3>
                                 </div>
                                 <div id="HEADLINE46" class='ladi-element'>
                                     <h3 class='ladi-headline'>&amp;<br></h3>
