--- a/index.html
+++ b/index.html
@@ -2191,7 +2191,8 @@
         }
 
         body {
-            font-family: Jura, sans-serif
+            /* font-family: Jura, sans-serif */
+            font-family: "Inter", "Open Sans", sans-serif;
         }
     </style>
     <style id="style_element" type="text/css">
@@ -3319,7 +3320,7 @@
             color: rgb(255, 255, 255);
             text-transform: uppercase;
             text-align: center;
-            font-family: Tinos, serif;
+            /* font-family: Tinos, serif; */
         }
 
         #IMAGE61>.ladi-image {
@@ -3938,7 +3939,7 @@
         }
 
         #PARAGRAPH28>.ladi-paragraph {
-            font-size: 32px;
+            font-size: 30px;
             font-weight: bold;
             line-height: 1.1;
             color: rgb(255, 255, 255);
@@ -4388,7 +4389,7 @@
         }
 
         #IMAGE157>.ladi-image>.ladi-image-background {
-            background-image: url("./image/qr2.jpeg");
+            /* background-image: url("./image/qr2.jpeg"); */
             background-position: -5px -14px;
             background-size: 100%;
         }
