--- a/index.html
+++ b/index.html
@@ -10533,7 +10533,8 @@ var message="NoRightClicking"; function defeatIE() {if (document.all) {(message)
                     <div class='ladi-paragraph'>Xác nhận và gửi lời chúc<br></div>
                 </div>
                 <div id="PARAGRAPH29" class='ladi-element'>
-                    <div class='ladi-paragraph'>Chúng tôi đang đếm từng ngày để chờ đón khoảnh khắc hạnh phúc nhất đời
+                    <div class='ladi-paragraph' style="text-align: justify;">Chúng tôi đang đếm từng ngày để chờ đón
+                        khoảnh khắc hạnh phúc nhất đời
                         mình. Rất
                         mong nhận được lời chúc phúc và yêu thương từ bạn – dù gần hay xa. Mỗi lời chúc sẽ là món quà
                         tuyệt vời mà
